--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -1,44 +1,43 @@
 # See this wiki page for more info:
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
-    info title
-    info underline
+  #info title
+  info users
+  info underline
 
-    info "OS" distro
-    info "Host" model
-    info "Kernel" kernel
-    info "Uptime" uptime
-    info "Packages" packages
-    info "Shell" shell
-    info "Resolution" resolution
-    info "DE" de
-    info "WM" wm
-    info "WM Theme" wm_theme
-    info "Theme" theme
-    info "Icons" icons
-    info "Terminal" term
-    info "Terminal Font" term_font
-    info "CPU" cpu
-    info "GPU" gpu
-    info "Memory" memory
+  info "OS" distro
+  info "Host" model
+  info "Kernel" kernel
+  info "Uptime" uptime
+  #info "Packages" packages
+  info "Shell" shell
+  #info "Resolution" resolution
+  info "DE" de
+  #info "WM" wm
+  info "WM Theme" wm_theme
+  info "Theme" theme
+  info "Icons" icons
+  info "Terminal" term
+  info "Terminal Font" term_font
+  info "CPU" cpu
+  info "Memory" memory
 
-    # info "GPU Driver" gpu_driver  # Linux/macOS only
-    # info "CPU Usage" cpu_usage
-    # info "Disk" disk
-    # info "Battery" battery
-    # info "Font" font
-    # info "Song" song
-    # [[ "$player" ]] && prin "Music Player" "$player"
-    # info "Local IP" local_ip
-    # info "Public IP" public_ip
-    # info "Users" users
-    # info "Locale" locale  # This only works on glibc systems.
+  info "Battery" battery
+  # info "GPU Driver" gpu_driver  # Linux/macOS only
+  # info "CPU Usage" cpu_usage
+  info "Disk" disk
+  info "Font" font
+  # info "Song" song
+  # [[ "$player" ]] && prin "Music Player" "$player"
+  # info "Local IP" local_ip
+  # info "Public IP" public_ip
+  #info "Users" users
+  # info "Locale" locale  # This only works on glibc systems.
 
-    info cols
+  info cols
 }
 
 # Title
-
 
 # Hide/Show Fully qualified domain name.
 #
@@ -47,9 +46,7 @@ print_info() {
 # Flag:     --title_fqdn
 title_fqdn="off"
 
-
 # Kernel
-
 
 # Shorten the output of the kernel function.
 #
@@ -63,9 +60,7 @@ title_fqdn="off"
 # off: 'Linux 4.8.9-1-ARCH'
 kernel_shorthand="on"
 
-
 # Distro
-
 
 # Shorten the output of the distro function
 #
@@ -85,11 +80,9 @@ distro_shorthand="off"
 # Example:
 # on:  'Arch Linux x86_64'
 # off: 'Arch Linux'
-os_arch="on"
-
+os_arch="off"
 
 # Uptime
-
 
 # Shorten the output of the uptime function
 #
@@ -103,9 +96,7 @@ os_arch="on"
 # off:  '2 days, 10 hours, 3 minutes'
 uptime_shorthand="on"
 
-
 # Memory
-
 
 # Show memory pecentage in output.
 #
@@ -116,7 +107,7 @@ uptime_shorthand="on"
 # Example:
 # on:   '1801MiB / 7881MiB (22%)'
 # off:  '1801MiB / 7881MiB'
-memory_percent="off"
+memory_percent="on"
 
 # Change memory output unit.
 #
@@ -128,11 +119,9 @@ memory_percent="off"
 # kib  '1020928KiB / 7117824KiB'
 # mib  '1042MiB / 6951MiB'
 # gib: ' 0.98GiB / 6.79GiB'
-memory_unit="mib"
-
+memory_unit="gib"
 
 # Packages
-
 
 # Show/Hide Package Manager names.
 #
@@ -144,11 +133,9 @@ memory_unit="mib"
 # on:   '998 (pacman), 8 (flatpak), 4 (snap)'
 # tiny: '908 (pacman, flatpak, snap)'
 # off:  '908'
-package_managers="on"
-
+package_managers="tiny"
 
 # Shell
-
 
 # Show the path to $SHELL
 #
@@ -172,9 +159,7 @@ shell_path="off"
 # off: 'bash'
 shell_version="on"
 
-
 # CPU
-
 
 # CPU speed type
 #
@@ -206,7 +191,7 @@ speed_shorthand="off"
 # Example:
 # on:   'Intel i7-6500U'
 # off:  'i7-6500U (4)'
-cpu_brand="on"
+cpu_brand="off"
 
 # CPU Speed
 # Hide/Show CPU speed.
@@ -251,9 +236,7 @@ cpu_cores="logical"
 # off: 'Intel i7-6500U (4) @ 3.1GHz'
 cpu_temp="off"
 
-
 # GPU
-
 
 # Enable/Disable GPU Brand
 #
@@ -264,7 +247,7 @@ cpu_temp="off"
 # Example:
 # on:  'AMD HD 7950'
 # off: 'HD 7950'
-gpu_brand="on"
+gpu_brand="off"
 
 # Which GPU to display
 #
@@ -285,9 +268,7 @@ gpu_brand="on"
 #   GPU1: Intel Integrated Graphics
 gpu_type="all"
 
-
 # Resolution
-
 
 # Display refresh rate next to each monitor
 # Default: 'off'
@@ -298,11 +279,9 @@ gpu_type="all"
 # Example:
 # on:  '1920x1080 @ 60Hz'
 # off: '1920x1080'
-refresh_rate="off"
-
+refresh_rate="on"
 
 # Gtk Theme / Icons / Font
-
 
 # Shorten output of GTK Theme / Icons / Font
 #
@@ -315,7 +294,6 @@ refresh_rate="off"
 # off: 'Numix [GTK2], Adwaita [GTK3]'
 gtk_shorthand="off"
 
-
 # Enable/Disable gtk2 Theme / Icons / Font
 #
 # Default: 'on'
@@ -325,7 +303,7 @@ gtk_shorthand="off"
 # Example:
 # on:  'Numix [GTK2], Adwaita [GTK3]'
 # off: 'Adwaita [GTK3]'
-gtk2="on"
+gtk2="off"
 
 # Enable/Disable gtk3 Theme / Icons / Font
 #
@@ -338,9 +316,7 @@ gtk2="on"
 # off: 'Numix [GTK2]'
 gtk3="on"
 
-
 # IP Address
-
 
 # Website to ping for the public IP
 #
@@ -356,9 +332,7 @@ public_ip_host="http://ident.me"
 # Flag:    --ip_timeout
 public_ip_timeout=2
 
-
 # Desktop Environment
-
 
 # Show Desktop Environment version
 #
@@ -367,9 +341,7 @@ public_ip_timeout=2
 # Flag:    --de_version
 de_version="on"
 
-
 # Disk
-
 
 # Which disks to display.
 # The values can be any /dev/sdXX, mount point or directory.
@@ -425,9 +397,7 @@ disk_subtitle="mount"
 # off: 'Disk (/): 74G / 118G'
 disk_percent="on"
 
-
 # Song
-
 
 # Manually specify a music player.
 #
@@ -510,9 +480,7 @@ song_shorthand="off"
 # Example: mpc_args=(-h HOST -P PASSWORD)
 mpc_args=()
 
-
 # Text Colors
-
 
 # Text Colors
 #
@@ -528,9 +496,7 @@ mpc_args=()
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
 colors=(distro)
 
-
 # Text Options
-
 
 # Toggle bold text
 #
@@ -553,7 +519,6 @@ underline_enabled="on"
 # Flag:     --underline_char
 underline_char="-"
 
-
 # Info Separator
 # Replace the default separator with the specified string.
 #
@@ -563,11 +528,9 @@ underline_char="-"
 # Example:
 # separator="->":   'Shell-> bash'
 # separator=" =":   'WM = dwm'
-separator=":"
-
+separator=" →"
 
 # Color Blocks
-
 
 # Color block range
 # The range of colors to print.
@@ -583,7 +546,7 @@ separator=":"
 #
 # Display colors 0-15 in the blocks. (16 colors)
 # neofetch --block_range 0 15
-block_range=(0 15)
+block_range=(0 7)
 
 # Toggle color blocks
 #
@@ -597,7 +560,7 @@ color_blocks="on"
 # Default:  '3'
 # Values:   'num'
 # Flag:     --block_width
-block_width=3
+block_width=4
 
 # Color block height in lines
 #
@@ -621,7 +584,6 @@ block_height=1
 col_offset="auto"
 
 # Progress Bars
-
 
 # Bar characters
 #
@@ -663,7 +625,6 @@ bar_length=15
 bar_color_elapsed="distro"
 bar_color_total="distro"
 
-
 # Info display
 # Display a bar with the info.
 #
@@ -684,9 +645,7 @@ memory_display="off"
 battery_display="off"
 disk_display="off"
 
-
 # Backend Settings
-
 
 # Image backend.
 #
@@ -708,11 +667,9 @@ image_backend="ascii"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="auto"
-
+image_source="/Users/aure/Pictures/428120998-0e1a77ac-6739-4153-bd24-abd3a5e143f5.png"
 
 # Ascii Options
-
 
 # Ascii distro
 # Which distro's ascii art to display.
@@ -760,7 +717,7 @@ image_source="auto"
 #       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
-ascii_distro="auto"
+ascii_distro="NixOS"
 
 # Ascii Colors
 #
@@ -781,9 +738,7 @@ ascii_colors=(distro)
 # Flag:    --ascii_bold
 ascii_bold="on"
 
-
 # Image Options
-
 
 # Image loop
 # Setting this to on will make neofetch redraw the image constantly until
@@ -852,7 +807,6 @@ xoffset=0
 # Values:  'color', 'blue'
 # Flag:    --bg_color
 background_color=
-
 
 # Misc Options
 
